Implement item service